--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DeoPersonalWebsite</title>
-    <meta name="description" content="">
+    <title>Deo's Personal Website</title>
+    <meta name="description" content="A sort of portfolio showing Deo's skills in creating different types of websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
