added keywords and better description for COMM 261

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Deo's Personal Website</title>
     <meta name="description" content="A sort of portfolio showing Deo's skills in creating different types of websites.">
+    <meta name="keywords" content="Deovandski, Deo, Portfolio, Ember Cli Tutorial, SASS Tutorial, Deo's SPace Program.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
