fixed assets location

--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>DeoPersonalWebsite</title>
-    <meta name="description" content="">
+    <meta name="description" content="A sort of portfolio showing Deo's skills in creating different types of websites.">
+ 	<meta name="keywords" content="Deovandski, Deo, Portfolio, Ember Cli Tutorial, SASS Tutorial, Deo's Space Program.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/deo-personal-website.css">
+
+	<!-- SHIMS AND OTHER RESOURCES -->
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+	<link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96">
 
     {{content-for "head-footer"}}
   </head>
