--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A sort of portfolio showing Deo's skills in creating different types of websites.">
  	<meta name="keywords" content="Deovandski, Deo, Portfolio, Ember Cli Tutorial, SASS Tutorial, Deo's Space Program.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="google-site-verification" content="K_bJDfS-38pKno3elqS83WsLhZlHDNIw-jnJ1WgXPD8" />
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
