--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
  	<meta name="keywords" content="Deovandski, Deo, Portfolio, Ember Cli Tutorial, SASS Tutorial, Deo's Space Program.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="K_bJDfS-38pKno3elqS83WsLhZlHDNIw-jnJ1WgXPD8" />
+	<meta name="msvalidate.01" content="90140FE95B2B5FE0E11EAA8D1C4EA5AE" />
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
