added fragment on index.html

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
 	<link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96">
 
+	<!-- Prerender.io-->
+	<meta name="fragment" content="!"> 
     {{content-for "head-footer"}}
   </head>
   <body>
