fixed css 404 and add more routing within ember tutorial

--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="K_bJDfS-38pKno3elqS83WsLhZlHDNIw-jnJ1WgXPD8" />
 	<meta name="msvalidate.01" content="90140FE95B2B5FE0E11EAA8D1C4EA5AE" />
-    <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/deo-personal-website.css">
+    <link rel="stylesheet" href="/assets/vendor.css">
+    <link rel="stylesheet" href="/assets/deo-personal-website.css">
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
-	<link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96">
     {{content-for "head"}}
     
     {{content-for "head-footer"}}
